avoid deprecated java.lang.Integer constructor (#73)